Style Fix: Use custom scrollbar not just for tabs

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -23,6 +23,14 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+
+    ::-webkit-scrollbar {
+        width: 0.3rem;
+        height: 2em;
+    }
+    ::-webkit-scrollbar-thumb {
+        background: var(--surface-600);
+    }
 }
 &::backdrop {
     background-image: none;
@@ -665,14 +673,6 @@ input[type="number"] {
     overflow: auto;
     padding: 1rem;
     background-color: var(--surface-100);
-
-    &::-webkit-scrollbar {
-        width: 0.3rem;
-        height: 2em;
-    }
-    &::-webkit-scrollbar-thumb {
-        background: var(--surface-600);
-    }
 }
 
 #content {
